--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
     {{ content }}
   </div>
   <div class="col-md-6">
-    <img src="{{ site.github.url }}/assets/img/home.jpg" alt="Home" width="100%">
+    <img src="{{ site.github.url }}/assets/img/profile.jpg" alt="Home" width="100%" style="border-radius:7px;">
   </div>
 </div>
 
