--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,6 +1,6 @@
 <div class="row g-5 mb-5">
   <div>
-    <h3 class="fw-bold border-bottom pb-3 mb-5">Publications</h3>
+    <h3 class="fw-bold border-bottom pb-3 mb-5">Main Projects</h3>
     {% if page.title == "Home" %}
       {% for item in site.data.publications.featured %}
         <p><a href="{{ item.url }}">{{ item.name }}</a></p>
