--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div>
-    <h3 class="fw-bold border-bottom pb-3 mb-5">Courses</h3>
+    <h3 class="fw-bold border-bottom pb-3 mb-5">mini projects</h3>
     {% for course in site.data.settings.courses %}
       <p><a href="{{ site.github.url }}/courses/{{ course.url}}">{{ course.name }}</a></p>
     {% endfor %}
