--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,14 +5,18 @@
       includes publications.html home
     
       <h2 id="u2net_portrait_sketch">U2Net_portrait_sketch</h2>
+    
+
+  
+<div class="col-md-6"> 
 <p>If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a></p>
 <p>Based on segmetation model U-2-Net, we discussed the possibility of using U-2-Net to draw portrait.
 It made quite good results, but we need to enhance it so we trained model by custom dataset &amp; image pre-processing, etc.</p>
 <p><strong>I hope that this described methods would be helpful to you😀</strong></p>
-<h2 id="usage">Usage</h2>
-<ol>
+</
+<div class="col-md-6">
 <li>Various styles of portrait sketchy</li>
-</ol>
+</div>
 <p><br><img src="https://user-images.githubusercontent.com/32811724/143386093-f9f3b1e0-4e8b-4fcd-9303-56a872888f5d.png" width="320px" height="180px"></img>
 <img src="https://user-images.githubusercontent.com/32811724/143386103-8eb3fb3b-8bed-4f37-8a49-3b4ef1718fe4.png" width="320px" height="180px"></img>
 </br>
