--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -4,7 +4,7 @@
     {% if page.title == "Home" %}
       includes publications.html home
     
-      <h2 id="u2net_portrait_sketch">U2Net_portrait_sketch</h2>
+      <h4 id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
     
 
   
