--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -7,7 +7,7 @@
       <h4 id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
     
 
-  
+<div class="row g-5 mb-5">
 <div class="col-md-6"> 
 <p>If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a></p>
 <p>Based on segmetation model U-2-Net, we discussed the possibility of using U-2-Net to draw portrait.
@@ -17,6 +17,8 @@ It made quite good results, but we need to enhance it so we trained model by cus
 <div class="col-md-6">
 <li>Various styles of portrait sketchy</li>
 </div>
+</div>
+    
 <p><br><img src="https://user-images.githubusercontent.com/32811724/143386093-f9f3b1e0-4e8b-4fcd-9303-56a872888f5d.png" width="320px" height="180px"></img>
 <img src="https://user-images.githubusercontent.com/32811724/143386103-8eb3fb3b-8bed-4f37-8a49-3b4ef1718fe4.png" width="320px" height="180px"></img>
 </br>
