--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,10 +1,20 @@
+<head>
+    <style>
+      .b {
+        background-color: #BBDEFB;
+        padding: 10px 20px;
+      }
+    </style>
+</head>
+
+
 <div class="row g-5 mb-5">
   <div>
     <h3 class="fw-bold border-bottom pb-3 mb-5">Main Projects</h3>
     {% if page.title == "Home" %}
       includes publications.html home
     
-      <h4 id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
+      <h4 class="b" id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
     
 
 <div class="row g-5 mb-5">
