--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -15,19 +15,17 @@
       includes publications.html home
     
       <h4 class="b" id="u2net_portrait_sketch"><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></h4>
-    
+  </div>
+</div>
 
 <div class="row g-5 mb-5">
-<div class="col-md-6"> 
-<p>If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a></p>
-<p>Based on segmetation model U-2-Net, we discussed the possibility of using U-2-Net to draw portrait.
-It made quite good results, but we need to enhance it so we trained model by custom dataset &amp; image pre-processing, etc.</p>
-<p><strong>I hope that this described methods would be helpful to you😀</strong></p>
-</
-<div class="col-md-6">
-<li>Various styles of portrait sketchy</li>
-</div>
-</div>
+  <div class="col-md-6"> 
+    If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a>
+    Based on segmetation model U-2-Net, we discussed the possibility of using U-2-Net to draw portrait.
+    It made quite good results, but we need to enhance it so we trained model by custom dataset &amp; image pre-processing, etc.
+  </div>
+  <div class="col-md-6">
+   Various styles of portrait sketchy
     
 <p><br><img src="https://user-images.githubusercontent.com/32811724/143386093-f9f3b1e0-4e8b-4fcd-9303-56a872888f5d.png" width="320px" height="180px"></img>
 <img src="https://user-images.githubusercontent.com/32811724/143386103-8eb3fb3b-8bed-4f37-8a49-3b4ef1718fe4.png" width="320px" height="180px"></img>
@@ -38,6 +36,9 @@ It made quite good results, but we need to enhance it so we trained model by cus
 <br><img src="https://user-images.githubusercontent.com/32811724/143386187-71006f1b-9e29-4158-b01b-f4541ad057f4.png" width="320px" height="180px"></img>
 <img src="https://user-images.githubusercontent.com/32811724/143386196-e7215ff1-7b2c-4e9c-8554-4bd8c94fc3ff.png" width="320px" height="180px"></img>
 </br></p>
+  </div>
+</div>
+
 <ol>
 <li>Video Application</li>
 </ol>
