--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -21,7 +21,11 @@
 <div class="row g-5 mb-5">
   <div class="col-md-6"> 
     If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a>
+      
+      
     Based on segmetation model U-2-Net, we discussed the possibility of using U-2-Net to draw portrait.
+      
+      
     It made quite good results, but we need to enhance it so we trained model by custom dataset &amp; image pre-processing, etc.
   </div>
   <div class="col-md-6">
@@ -44,6 +48,13 @@
 <img src="https://user-images.githubusercontent.com/32811724/143388497-3237d2db-3b80-4309-97f3-a4d7aae28321.gif" alt="Traffic_light_custom_b2" width="100%"></p>
   </div>    
   <div class="col-md-6">
+      description
+      description
+      description
+      
+      description
+      description
+      description
   </div>
 </div>
 
