--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,13 +20,14 @@
 
 <div class="row g-5 mb-5">
   <div class="col-md-6"> 
-    If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a>
-      
-      
-    Based on segmetation model U-2-Net, we discussed the possibility of using U-2-Net to draw portrait.
-      
-      
-    It made quite good results, but we need to enhance it so we trained model by custom dataset &amp; image pre-processing, etc.
+      <h6> High-detailed Segmentation becomes Portrait sketch </h6>
+      <br></br>
+      <p> The U-2Net is famous for segmetation model.</p>
+      <p> It's model has a complex structure so it does segmetnation to the level that presents a strand of hair.</p>
+      <br></br>
+      <p> Based on this high quality, people thought that it is possible to use this model for portrait sketch but at first it had not good performance. </p>
+      <p> I tried various trying to enhance this model such as preprocessing images, devising a dedicated augmentation techniques. </p>
+      <p> If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a> <p>
   </div>
   <div class="col-md-6">
     
