--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -23,13 +23,12 @@
       <br></br>
       <br></br>
       <h5> High-detailed Segmentation becomes Portrait sketch </h5>
-      <br></br>
-      <p> The U-2Net is famous for segmetation model.</p>
-      <p> It's model has a complex structure so it does segmetnation to the level that presents a strand of hair.</p>
-      <br></br>
-      <p> Based on this high quality, people thought that it is possible to use this model for portrait sketch but at first it had not good performance. </p>
-      <p> I tried various trying to enhance this model such as preprocessing images, devising a dedicated augmentation techniques. </p>
-      <p> If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a> <p>
+      <p> * The U-2Net is famous for segmetation model.</p>
+      <p> * It's model has a complex structure so it does segmetnation to the level that presents a strand of hair.</p>
+      <h5> Enhancing to become portrait model </h5>
+      <p> * Based on this high quality, people thought that it is possible to use this model for portrait sketch but at first it had not good performance. </p>
+      <p> * I tried various trying to enhance this model such as preprocessing images, devising a dedicated augmentation techniques. </p>
+      <p> * If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a> <p>
   </div>
   <div class="col-md-6">
     
@@ -60,20 +59,10 @@
       description
   </div>
 </div>
-
-<h5 id="enhancement-of-portrait-sketchy">Enhancement of portrait sketchy</h5>
-<p><a href="https://github.com/xuebinqin/U-2-Net">original repository</a> proposed using of portrait sketchy with <a href="https://github.com/yiranran/APDrawingGAN">APDrawingGAN dataset</a>, it is quite good for drawing <strong>portrait only</strong> but still it has bad performance, especially when it draws landscape.</p>
-<p><img src="https://user-images.githubusercontent.com/32811724/143389405-242a56ce-f099-4c4a-b1c0-473db3b138f7.png" alt="748066F02_1-17-TH-05-975_00310"></p>
-<p>So we enhanced it by using custom dataset and dataset transforms, such as random bluring, random affine, jittering head, jittering nearby human&#39;s outline.</p>
-<p><img src="https://user-images.githubusercontent.com/32811724/143390222-ddcb5f1d-dea0-45ff-9fba-5a614bcf9f46.png" alt="750365F02_1-17-TH-09-374_00106"></p>
-<p>But It still has many dirty messy pixels on the whole picture, we want to make it clear so applied Opencv based morphology, filling contour, blurring etc.</p>
-<p><img src="https://user-images.githubusercontent.com/32811724/143390737-fadb6c55-101c-49da-8d68-6c62c501cc00.png" alt="744359F02_1-17-TH-04-780_00594"></p>
-<p>It became quite good, but we continued because we want to make it be lost more information such as face&amp;cloth detail, but keep the important line information.</p>
-<p><img src="https://user-images.githubusercontent.com/32811724/143391038-b7fc3ddd-53c4-4071-bd5a-ae3077e69485.png" alt="758050F02_1-18-TH-03-295_00425"></p>
 <h5 id="other-things">More</h5>
 <ul>
-<li>If you want to see the enhancing processes, plese refer this repository</li>
-<li><A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A></li>
+* If you want to see the enhancing processes, plese refer this repository
+* <A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A>
 </ul>
 
     
