--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -23,12 +23,12 @@
       <br></br>
       <br></br>
       <h5> High-detailed Segmentation becomes Portrait sketch </h5>
-      <p> * The U-2Net is famous for segmetation model.</p>
-      <p> * It's model has a complex structure so it does segmetnation to the level that presents a strand of hair.</p>
+      <p> - The U-2Net is famous for segmetation model.</p>
+      <p> - It's model has a complex structure so it does segmetnation to the level that presents a strand of hair.</p>
       <h5> Enhancing to become portrait model </h5>
-      <p> * Based on this high quality, people thought that it is possible to use this model for portrait sketch but at first it had not good performance. </p>
-      <p> * I tried various trying to enhance this model such as preprocessing images, devising a dedicated augmentation techniques. </p>
-      <p> * If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a> <p>
+      <p> - Based on this high quality, people thought that it is possible to use this model for portrait sketch but at first it had not good performance. </p>
+      <p> - I tried various trying to enhance this model such as preprocessing images, devising a dedicated augmentation techniques. </p>
+      <p> - If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a> <p>
   </div>
   <div class="col-md-6">
     
@@ -50,13 +50,16 @@
 <img src="https://user-images.githubusercontent.com/32811724/143388497-3237d2db-3b80-4309-97f3-a4d7aae28321.gif" alt="Traffic_light_custom_b2" width="90%"></p>
   </div>    
   <div class="col-md-6">
-      description
-      description
-      description
-      
-      description
-      description
-      description
+      <br></br>
+      <br></br>
+      <h5> Video demo & TODO </h5>
+      <p> - It has been confirmed that we can produce videos of a different style from conventional common black-and-white or sketch transformations.</p>
+      <p> - The above one is similar to common sketch transformation but below one bring us new style, with removed dirty information.</p>
+      <p> - However, additional work seems to be needed to apply the video, such as the contrast of the screen changing naturally.</p>
+      <h5> Enhancing to become portrait model </h5>
+      <p> - Based on this high quality, people thought that it is possible to use this model for portrait sketch but at first it had not good performance. </p>
+      <p> - I tried various trying to enhance this model such as preprocessing images, devising a dedicated augmentation techniques. </p>
+      <p> - If you want to get information about U2Net, please refer <a href="https://github.com/xuebinqin/U-2-Net">this original repository</a> <p>
   </div>
 </div>
 <h5 id="other-things">More</h5>
