--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -57,10 +57,8 @@
       <p> - The above one is similar to common sketch transformation but below one bring us new style, with removed dirty information.</p>
       <p> - However, additional work seems to be needed to apply the video, such as the contrast of the screen changing naturally.</p>
       <h5 id="other-things">More</h5>
-      <ul>
-        * If you want to see the enhancing processes, plese refer this repository
-        * <A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A>
-      </ul>
+      <p> - If you want to see the enhancing processes, plese refer this repository </p>
+      <p> - <A href = "https://github.com/HyeongminMoon/U-2-Net_portrait_sketch">(2021) Portrait sketch by improving segmentation model</A> </p>
   </div>
 </div>
     
