--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -74,6 +74,7 @@
   
 </canvas>
 
+<input type="button" id="button1" onclick="predict();" value="demo"/>
 
 <script>
     
@@ -117,7 +118,7 @@ const predict = async () => {
 
 };
 
-predict();
+// predict();
  
 
     
