--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -68,7 +68,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/deeplab"></script>
 
-<img id="img" src="ade20k.jpg" alt="" width="90%"/>
+<img id="img" src="./assets/img/ade20k.jpg" alt="" width="90%"/>
 <!-- width=500 height=227 -->
 <canvas id="person">
   
