--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -70,7 +70,7 @@
 
 <div class="row g-5 mb-5">
     <div class="col-md-6">
-        <img id="img" src="./assets/img/ade20k.jpg" alt="" width="90%"/>
+        <img id="img" src="./assets/img/demo1.jpg" alt="" width="90%"/>
         <input type="button" id="button1" onclick="predict();" value="demo"/>
         <form method="post" enctype="multipart/form-data">
         <input type="file" id="button2" onchange="changeimg(this);" accpet="image/*" value="upload image"/>
