--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -87,7 +87,7 @@
 <p> - In this situation, there is a good solution that use GPU without CUDA, is graphical backend such as WebGL. </p>
 <p> - Now what we all need is preparing custom model, being lighten(using quantization) model, load model!</p>
 <p> - Above demo don't need server side operation, it uses your computer resource, CPU and GPU. (So you can feel your computer get lag when you start demo)</p>
-<p> - Unfortunately, there is a chache problem with processing the gpu at the moment, so if your gpu capacity is small, it can be shutdown when executing the demo. So now, it is only allowed to work with cpu.
+<p> - Unfortunately, there is a chache problem with processing the gpu now, so if your gpu capacity is small, it can be shutdown when executing the demo. So now, it is only allowed to work with cpu.
 
 <script>
 function changeimg(input) {
