--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -145,7 +145,7 @@ const predict = async () => {
 
 
 <hr width = "90%" color = "black">
-<h5> Project List </h5>
+<h5> Project Links </h5>
       {% for item in site.data.publications.featured %}
         <p><a href="{{ item.url }}">{{ item.name }}</a></p>
       {% endfor %}
