--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -150,8 +150,9 @@ const predict = async () => {
 <p> - So we need to make new classification table based on ViennaCodes.</p>
 <p> - We tried to contain the all feature but some are removed due to accuracy. </p>
 <p> - For example, the trademarks' viennacodes distribution is not flat because many trademark contain a Creature.</p>
+<div style="text-align:center">
 <img src="./assets/img/dist.png" width="90%"></img>
-
+</div>
 <h6> result samples </h6>
 <p><br><img src="./assets/img/det1.jpg" width="30%" title="det1" alt="det1"></img>
 <img src="./assets/img/det2.jpg" width="30%" title="det2" alt="det2"></img>
