--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -172,7 +172,10 @@ const predict = async () => {
         <p> - Finally we got final Image Similarity score </p>
     </div>
     <div class="col-md-6">
-        
+        <br><img src="./assets/img/sim1.png" width="45%"></img>
+        <img src="./assets/img/sim2.png" width="45%"></img></br>
+        <br><img src="./assets/img/sim3.png" width="45%"></img>
+        <img src="https://user-images.githubusercontent.com/32811724/142619840-5c51e3bb-9ec6-44ee-a3bc-63b35ebf0211.png" width="45%"></img></br>
     </div>
 </div>
 
