--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -152,11 +152,13 @@ const predict = async () => {
 <p> - For example, the trademarks' viennacodes distribution is not flat because many trademark contain a Creature.</p>
 <div style="text-align:center">
 <img src="./assets/img/dist.png" width="60%"></img>
-</div>
+
 <h6> result samples </h6>
+<div style="text-align:center">
 <p><br><img src="./assets/img/det1.jpg" width="30%" title="det1" alt="det1"></img>
 <img src="./assets/img/det2.jpg" width="30%" title="det2" alt="det2"></img>
 <img src="./assets/img/det3.jpg" width="30%" title="det3" alt="det3"></img><br/></p>
+</div>
 
 <div class="row g-5 mb-5">
     <div class="col-md-6">
@@ -179,12 +181,12 @@ const predict = async () => {
     </div>
 </div>
 
-
-<p> - Now what we all need is preparing custom model, being lighten(using quantization) model, load model!</p>
-<p> - Above demo don't need server side operation, it uses your computer resource, CPU and GPU. (So you can feel your computer get lag when you start demo)</p>
-<p> - Unfortunately, there is a chache problem with processing the gpu now, so if your gpu capacity is small, it can be shutdown when executing the demo. So now, it is only allowed to work with cpu.
-
-    
+<h5> Similar tradeamark searching service </h5>
+<p> As an application of this repository, we made a Similar trademark seraching service. </p>
+<div style="text-align:center">
+    <img src="https://user-images.githubusercontent.com/32811724/142619590-b5fa63a2-6b15-4720-9d99-cbd15fddc3c7.png" width="60%">
+    <img src="https://user-images.githubusercontent.com/32811724/142619604-3c5aeaad-fa1d-4b18-b169-804314554c2e.png" width="60%">
+</div>
 
 <hr width = "90%" color = "black">
 <h5> Project Links </h5>
