--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -150,14 +150,12 @@ const predict = async () => {
 <p> - So we need to make new classification table based on ViennaCodes.</p>
 <p> - We tried to contain the all feature but some are removed due to accuracy. </p>
 <p> - For example, the trademarks' viennacodes distribution is not flat because many trademark contain a Creature.</p>
-<div style="text-align:center">
-<img src="./assets/img/dist.png" width="60%"></img>
+<div style="text-align:left">
 <br> </br>
 <h6> result samples </h6>
-<div style="text-align:center">
-<p><br><img src="./assets/img/det1.jpg" width="25%" title="det1" alt="det1"></img>
-<img src="./assets/img/det2.jpg" width="25%" title="det2" alt="det2"></img>
-<img src="./assets/img/det3.jpg" width="25%" title="det3" alt="det3"></img><br/></p>
+<p><br><img src="./assets/img/det1.jpg" width="20%" title="det1" alt="det1"></img>
+<img src="./assets/img/det2.jpg" width="20%" title="det2" alt="det2"></img>
+<img src="./assets/img/det3.jpg" width="20%" title="det3" alt="det3"></img><br/></p>
 </div>
 
 <div class="row g-5 mb-5" style="text-align:left">
@@ -168,7 +166,7 @@ const predict = async () => {
         <p> - To attach triplet loss, we made triple pair dataset by above ViennaCode based trademark classification rules, 
             select two **Similar** images which has same label and one **Different** images which is selected randomly </p>
         <p> - And we calculated the Cosine Similarity from it's final fully connected vectors.</p>
-        <br> </br>
+
         <h5> Image Similarity </h5>
         <p> - And again we mixed the results with above multi label classification score. </p>
         <p> - Finally we got final Image Similarity score </p>
