--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -78,6 +78,7 @@
     </div>
     <div class="col-md-6">
         <canvas id="person">
+        <img id="img" src="./assets/img/demo_clear.jpg" alt="" width="90%"/>
         </canvas>
     </div>
 </div>
@@ -178,7 +179,7 @@ const predict = async () => {
     </div>
 </div>
 
-<h5> Similar tradeamark searching service </h5>
+<h5> Similar trademark searching service </h5>
 <p> As an application of this repository, we made a Similar trademark seraching service. </p>
 <div style="text-align:center">
     <img src="https://user-images.githubusercontent.com/32811724/142619590-b5fa63a2-6b15-4720-9d99-cbd15fddc3c7.png" width="50%">
