--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -78,7 +78,7 @@
     </div>
     <div class="col-md-6">
         <canvas id="person">
-        <img id="img" src="./assets/img/demo_clear.jpg" alt="" width="90%"/>
+            <img id="demo_clear" src="./assets/img/demo_clear.jpg" alt="" width="90%"/>
         </canvas>
     </div>
 </div>
