--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -88,7 +88,6 @@
 <p> - Now what we all need is preparing custom model, being lighten(using quantization) model, load model!</p>
 <p> - Above demo don't need server side operation, it uses your computer resource, CPU and GPU. (So you can feel your computer get lag when you start demo)</p>
 <p> - Unfortunately, there is a chache problem with processing the gpu now, so if your gpu capacity is small, it can be shutdown when executing the demo. So now, it is only allowed to work with cpu.
-asdfasdf
     
 <script>
 function changeimg(input) {
@@ -114,14 +113,14 @@ const img = document.getElementById('img');
 // console.log(pixels)
 // const input = tf.zeros([227, 500, 3]);
 // ...
+var canvas = document.getElementById('person');
+canvas.style.width = '90%';
+canvas.style.height = '90%';
+ctx = canvas.getContext('2d');
 const demo_clear_img = new Image();
-demo_clear_img.src = "./assets/img/demo_clear.jpg"
+demo_clear_img.src = "/assets/img/demo_clear.jpg";
 demo_clear_img.onload = function(){
-    var canvas = document.getElementById('person'); 
-    canvas.style.width = '90%';
-    canvas.style.height = '90%';
-    ctx = canvas.getContext('2d');
-    ctx.drawImage(demo_clear_img, 0, 0, '90%', '90%')
+    ctx.drawImage(demo_clear_img, 0, 0)
 }
     
 const predict = async () => {
