--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -186,11 +186,20 @@ const predict = async () => {
     </div>
 </div>
 
-<h5> Similar trademark searching service </h5>
-<p> As an application of this repository, we made a Similar trademark seraching service. </p>
-<img src="https://user-images.githubusercontent.com/32811724/142619590-b5fa63a2-6b15-4720-9d99-cbd15fddc3c7.png" width="50%">
-<img src="https://user-images.githubusercontent.com/32811724/142619604-3c5aeaad-fa1d-4b18-b169-804314554c2e.png" width="50%">
-
+<div class="row g-5 mb-5">
+    <div class="col-md-6">
+        <img src="https://user-images.githubusercontent.com/32811724/142619590-b5fa63a2-6b15-4720-9d99-cbd15fddc3c7.png" width="50%">
+        <img src="https://user-images.githubusercontent.com/32811724/142619604-3c5aeaad-fa1d-4b18-b169-804314554c2e.png" width="50%">
+    </div>
+    <div class="col-md-6">
+        <br> </br>
+        <h5> Similar trademark searching service </h5>
+        <p> As an application of this repository, we made a Similar trademark seraching service. </p>
+        <br> </br>
+        <h5> Patent </h5>
+        <A href = "https://doi.org/10.8080/1020200181271">Patent METHOD OF SEARCHING TRADEMARKS AND APPARATUS FOR SEARCHING TRADEMARKS</A>
+    </div>
+</div>
 
 <div class="row g-5 mb-5" style="text-align:left">
 <hr width = "90%" color = "black">
