--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -147,7 +147,37 @@ const predict = async () => {
 // predict();
 </script>
 
-
+<h4 class="b" id="chinese">(2021) AI Chinese Calligraphy Teacher (인공훈장)</h4>    
+<div class="row g-5 mb-5">
+    <div class="col-md-6">
+        <br> </br>
+        <h5> Introduction </h5>
+        <p> This is a project that reveals my development philosophy </p>
+        <p> Before starting this project, we didnt consider how to develop a program, we considered <b>how to solve a problem</b>. </p>
+        <p> So we met calligrapher several times, and asked what he need from the perspective of <b>teaching/learning calligraphy</b></p>
+        <p> Calligraphy has both artistic and academic meanings. </p>
+        <p> In fact, when evaluating calligraphy in a calligraphy contest, it is included that an evaluation of which typeface was reproduced in the past. </p>
+    </div>
+    <div class="col-md-6">
+        meet professor image
+        <img src="./assets/img/cal_intro.jpg" width="90%"></img>
+    </div>
+</div>
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
 <h4 class="b" id="frcnn"><A href = "https://github.com/HyeongminMoon/FRCNN_trademark_similarity">(2020) Rank search by image similarity and multi label classificaion </A></h4>
 
 
